# MSim

./: .gitignore  README.md  Stained.json  lamino_config.json  pyproject.toml  simulate_config.json
Models/: StainedTissue.py  chip.json  chip.py
Models/Biosample/: brain.py  brain_cpp.py  brain_sample.json  compile.sh  sim_config.json  utils.py
Models/Biosample/include/: cball.h  cells.h
Models/Biosample/src/: binding.cpp  cball.cpp  cells.cpp  vessels.cpp
Models/Biosample/trash/: brain_opt.py  carve_bind.cpp
Models/Foam/: foam.py
Models/NeuroSample/: .nfs0000000004b68d5c00000250  CMakeLists.txt  brain_cpp.py  sim_config.json
Models/NeuroSample/include/: cells.h  geometry.h  labels.h  vessels.h
Models/NeuroSample/src/: binding.cpp  cells.cpp  geometry.cpp  vessels.cpp
Models/NeuroSample/trash/: brain.cpp  brain_py.py  carve_ball.cu  cells copy.cpp2  vessels.cpp
Models/Semiconductors/: chip.json  chip.py  chip_codes.json  chip_model.json
Notebooks/: config.json  config_photons_3.json  example.ipynb  hemisphere_macroregions.ipynb  lam_modeling.ipynb  neuron.ipynb  phantom_bone.json  single_neuron.py
Notebooks/iframe_figures/: figure_10.html
examples/: config.json  config_photons_0.json  config_photons_1.json  experiment.py  generate_brain.py  generate_brain_phantom.py  generate_phantom.py  phantom_brain.json  phantom_dose_test.json  phantom_microstructure.json  phantom_mouse_brain.json  phantom_sphere.json  sample.json  stream_test.py  test5.py  tomo_reco.py
msim/: LSim_wrap.py  __init__.py  cli.py  geometry.py  io_data.py  lamino_sim.py  logger.py  phys_sim.py  physics.py  simulate.py  simulator.py  stream.py  vis_chip.py  vis_volume.py
msim/cuda/: lkernel.cu
utils/: clean_model.sh  compile.sh  display.py  mat_table.py  test_rotate.py
