[project]
name = "msim"
version = "0.1.0"
description = "Modular X-ray simulation and visualization toolkit"
authors = [{ name = "Alberto Mittone", email = "amittone@anl.gov" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "numpy",
    "vedo",
    "xraylib",
    "numba",
    "h5py",
    "scipy"
    ]

[project.scripts]
# CLI entry point
msim = "msim.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["msim*"] } }
