[project]
name = "msim"
version = "0.1.0"
description = "Modular X-ray simulation and visualization toolkit"
authors = [{ name = "Alberto Mittone", email = "amittone@anl.gov" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "xraylib",
    "h5py",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["msim*"] } }
